--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,30 +1,30 @@
 {{! 社交信息 }}
 <nav class="navigation social">
     <ul class="social">
-        <li>
+        {{!-- <li>
             <a href="http://weibo.com/17064042" class="social-weibo">
                 <i class="fa fa-xlg fa-weibo" data-original-title="{{t "Weibo"}}" data-rel="tooltip"></i>
             </a>
-        </li>
+        </li> --}}
         <li>
-            <a href="https://github.com/xiaoluoboding" class="social-github">
+            <a href="https://github.com/sungongwei" class="social-github">
                 <i class="fa fa-xlg fa-github" data-original-title="{{t "Github"}}" data-rel="tooltip"></i>
             </a>
         </li>
-        <li>
+        {{!-- <li>
             <a href="http://music.163.com/#/user/home?id=18953599" class="social-music">
                 <i class="fa fa-xlg fa-music" data-original-title="{{t "NeteaseMusic"}}" data-rel="tooltip"></i>
             </a>
-        </li>
+        </li> --}}
         <li>
-            <a href="mailto:xiaoluoboding@gmail.com" class="social-mail">
+            <a href="mailto:sgw3344@qq.com" class="social-mail">
                 <i class="fa fa-xlg fa-envelope-o" data-original-title="{{t "Contact Me"}}" data-rel="tooltip"></i>
             </a>
         </li>
-        <li>
+        {{!-- <li>
             <a href="/rss/" class="social-rss">
                 <i class="fa fa-xlg fa-rss" data-original-title="{{t "RSS"}}" data-rel="tooltip"></i>
             </a>
-        </li>
+        </li> --}}
     </ul>
 </nav>
